<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ceos</string>
    <string name="ceos_gestionnaire_concentrateur">Ceos : Gestionnaire concentrateur</string>
    <string name="acceder_au_formulaire">Accéder au formulaire</string>
    <string name="Logo_Sicae">LOGO_SICAE</string>
    <string name="copyright_sicae_oise">Copyright : SICAE-OISE</string>
    <string name="fiche_d_intervention">FICHE D\'INTERVENTION</string>
    <string name="date_de_l_intervention">Date de l\'intervention :</string>
    <string name="nom_de_l_agent">Nom de l\'agent :</string>
    <string name="commune">Commune :</string>
    <string name="nom_du_poste">Nom du poste :</string>
    <string name="reference_wapiti">Référence WAPITI :</string>
    <string name="ref_wapiti">Réf WAPITI</string>
    <string name="date">Date</string>
    <string name="nom">Nom</string>
    <string name="poste">Poste</string>
    <string name="type_d_intervention">Type d\'intervention :</string>
    <string name="numero_de_serie">Numéro de série :</string>
    <string name="ip_carte_sim">IP cate SIM :</string>
    <string name="txt_type_raccord">Type de raccordement :</string>
    <string name="txt_type_raccord2">Type raccordement</string>
    <string name="type_antenne_posee">Type d\'antenne posée :</string>
    <string name="emplacement_antenne">Emplacement antenne :</string>
    <string name="mesure_signal_en_interieur_porte_fermee">Mesure signal en intérieur (porte fermée) :</string>
    <string name="mesure_signal_en_exterieur">Mesure signal en extérieur :</string>
    <string name="valider">Valider</string>
    <string name="signal_in">Mesure signal en intérieur</string>
    <string name="signal_ext">Mesure signal en extérieur</string>
    <string name="todo">TODO</string>
    <!-- Multichoix type d'intervention -->
    <string-array name="type_inter">
        <item>Pose</item>
        <item>Remplacement</item>
        <item>Dépose</item>
    </string-array>
    <!-- Multichoix type d'antenne -->
    <string-array name="type_antenne">
        <item value="518">antenne déportée</item>
        <item value="519">antenne origine</item>
        <item value="520">antenne déportée amplifiée + 6dB</item>
    </string-array>
    <!-- Mulitchoix emplacement antenne -->
    <string-array name="emplacement_antenne">
        <item value="521">Façade du poste extérieur</item>
        <item value="522">Pignon extérieur poste</item>
        <item value="523">Mur intérieur</item>
        <item value="524">Intérieur sur appareil</item>
    </string-array>
    <!-- Mulitchoix type raccordement -->
    <string-array name="type_raccord">
        <item value="541">Départ CCPI tri EP sur TUR</item>
        <item value="542">Départ équipement auxiliaire tri sur TIPI</item>
        <item value="543">Connecteur isolé sur laison BT Transfo - TUR</item>
        <item value="544">Raccordement sur émergence</item>
        <item value="545">Raccordement sur un départ du tableau BT</item>
        <item value="546">Bornes BT du transfo</item>
    </string-array>
    <string name="txt_emplacement_concent">Emplacement concentrateur :</string>
    <!-- Mulitchoix emplacement concentrateur -->
    <string-array name="spinner_emplacement_concentrateur">
        <item value="515">Tableau fixé au mur</item>
        <item value="516">Fixé sur TIPI</item>
        <item value="517">Sur paroi poste socle</item>
        <item value="547">Coffret S300</item>
        <item value="548">Coffret S22</item>
        <item value="549">Coffret S2000</item>
    </string-array>
</resources>